--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vday25",
-  "homepage": "https://srivathsanram.github.io/vday25",
+  "homepage": "https://srivathsanram.github.io/vday25/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
